// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GridCard snapshots renders basic card correctly 1`] = `
<button
  class="group relative w-full overflow-hidden rounded-[28px] bg-gradient-to-b from-white/5 to-white/[0.02] p-[2px] transition-transform duration-200 hover:-translate-y-1 active:scale-95 hover:shadow-[0_20px_40px_rgba(9,12,24,0.45)]"
  type="button"
>
  <div
    class="relative h-full w-full overflow-hidden rounded-[26px] bg-black"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-white/5 via-transparent to-white/5 opacity-0 transition-opacity duration-200 group-hover:opacity-30"
    />
    <div
      class="relative aspect-[3/4] w-full overflow-hidden"
    >
      <img
        alt="John Doe"
        class="object-cover"
        data-testid="grid-card-image"
        sizes="(min-width: 768px) 25vw, 50vw"
        src="https://example.com/photo.jpg"
      />
      <span
        class="absolute left-3 top-3 flex items-center gap-1 rounded-full bg-emerald-500/90 px-3 py-1 text-xs font-semibold text-white shadow-lg"
      >
        <span
          class="h-2 w-2 animate-pulse rounded-full bg-white"
        />
        Online
      </span>
      <div
        class="absolute inset-x-0 bottom-0 flex flex-col gap-2 bg-gradient-to-t from-black via-black/60 to-transparent px-4 pb-4 pt-16"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex flex-col text-left"
          >
            <span
              class="text-lg font-semibold text-white leading-snug"
            >
              John Doe
            </span>
            <span
              class="text-xs uppercase tracking-[0.3em] text-white/70"
            >
              2.5 mi
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          />
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Music
          </span>
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Travel
          </span>
        </div>
      </div>
    </div>
  </div>
</button>
`;

exports[`GridCard snapshots renders card with DTFN badge 1`] = `
<button
  class="group relative w-full overflow-hidden rounded-[28px] bg-gradient-to-b from-white/5 to-white/[0.02] p-[2px] transition-transform duration-200 hover:-translate-y-1 active:scale-95 hover:shadow-[0_20px_40px_rgba(9,12,24,0.45)]"
  type="button"
>
  <div
    class="relative h-full w-full overflow-hidden rounded-[26px] bg-black"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-white/5 via-transparent to-white/5 opacity-0 transition-opacity duration-200 group-hover:opacity-30"
    />
    <div
      class="relative aspect-[3/4] w-full overflow-hidden"
    >
      <img
        alt="John Doe"
        class="object-cover"
        data-testid="grid-card-image"
        sizes="(min-width: 768px) 25vw, 50vw"
        src="https://example.com/photo.jpg"
      />
      <span
        class="absolute left-3 top-3 flex items-center gap-1 rounded-full bg-emerald-500/90 px-3 py-1 text-xs font-semibold text-white shadow-lg"
      >
        <span
          class="h-2 w-2 animate-pulse rounded-full bg-white"
        />
        Online
      </span>
      <span
        class="absolute right-3 top-3 rounded-full bg-gradient-to-r from-fuchsia-500 to-purple-500 px-3 py-1 text-xs font-semibold text-white shadow-lg"
      >
        DTFN
      </span>
      <div
        class="absolute inset-x-0 bottom-0 flex flex-col gap-2 bg-gradient-to-t from-black via-black/60 to-transparent px-4 pb-4 pt-16"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex flex-col text-left"
          >
            <span
              class="text-lg font-semibold text-white leading-snug"
            >
              John Doe
            </span>
            <span
              class="text-xs uppercase tracking-[0.3em] text-white/70"
            >
              2.5 mi
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          />
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-orange-500/20 text-orange-400 border border-orange-500/30"
          >
            Ready Now
          </span>
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Music
          </span>
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Travel
          </span>
        </div>
      </div>
    </div>
  </div>
</button>
`;

exports[`GridCard snapshots renders card with all action buttons 1`] = `
<button
  class="group relative w-full overflow-hidden rounded-[28px] bg-gradient-to-b from-white/5 to-white/[0.02] p-[2px] transition-transform duration-200 hover:-translate-y-1 active:scale-95 hover:shadow-[0_20px_40px_rgba(9,12,24,0.45)]"
  type="button"
>
  <div
    class="relative h-full w-full overflow-hidden rounded-[26px] bg-black"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-white/5 via-transparent to-white/5 opacity-0 transition-opacity duration-200 group-hover:opacity-30"
    />
    <div
      class="relative aspect-[3/4] w-full overflow-hidden"
    >
      <img
        alt="John Doe"
        class="object-cover"
        data-testid="grid-card-image"
        sizes="(min-width: 768px) 25vw, 50vw"
        src="https://example.com/photo.jpg"
      />
      <span
        class="absolute left-3 top-3 flex items-center gap-1 rounded-full bg-emerald-500/90 px-3 py-1 text-xs font-semibold text-white shadow-lg"
      >
        <span
          class="h-2 w-2 animate-pulse rounded-full bg-white"
        />
        Online
      </span>
      <div
        class="absolute inset-x-0 bottom-0 flex flex-col gap-2 bg-gradient-to-t from-black via-black/60 to-transparent px-4 pb-4 pt-16"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex flex-col text-left"
          >
            <span
              class="text-lg font-semibold text-white leading-snug"
            >
              John Doe
            </span>
            <span
              class="text-xs uppercase tracking-[0.3em] text-white/70"
            >
              2.5 mi
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <button
              aria-label="Send message to John Doe"
              class="rounded-full bg-white/15 p-2 text-sm text-white shadow hover:bg-white/25"
              type="button"
            >
              <svg
                data-testid="chat-icon"
              />
            </button>
            <button
              aria-label="Add John Doe to favorites"
              class="rounded-full p-2 text-sm text-white shadow transition-colors bg-white/15 hover:bg-white/25"
              type="button"
            >
              <svg
                data-testid="star-icon-outline"
              />
            </button>
          </div>
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Music
          </span>
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Travel
          </span>
        </div>
      </div>
    </div>
  </div>
</button>
`;

exports[`GridCard snapshots renders card with favorited state 1`] = `
<button
  class="group relative w-full overflow-hidden rounded-[28px] bg-gradient-to-b from-white/5 to-white/[0.02] p-[2px] transition-transform duration-200 hover:-translate-y-1 active:scale-95 hover:shadow-[0_20px_40px_rgba(9,12,24,0.45)]"
  type="button"
>
  <div
    class="relative h-full w-full overflow-hidden rounded-[26px] bg-black"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-white/5 via-transparent to-white/5 opacity-0 transition-opacity duration-200 group-hover:opacity-30"
    />
    <div
      class="relative aspect-[3/4] w-full overflow-hidden"
    >
      <img
        alt="John Doe"
        class="object-cover"
        data-testid="grid-card-image"
        sizes="(min-width: 768px) 25vw, 50vw"
        src="https://example.com/photo.jpg"
      />
      <span
        class="absolute left-3 top-3 flex items-center gap-1 rounded-full bg-emerald-500/90 px-3 py-1 text-xs font-semibold text-white shadow-lg"
      >
        <span
          class="h-2 w-2 animate-pulse rounded-full bg-white"
        />
        Online
      </span>
      <div
        class="absolute inset-x-0 bottom-0 flex flex-col gap-2 bg-gradient-to-t from-black via-black/60 to-transparent px-4 pb-4 pt-16"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex flex-col text-left"
          >
            <span
              class="text-lg font-semibold text-white leading-snug"
            >
              John Doe
            </span>
            <span
              class="text-xs uppercase tracking-[0.3em] text-white/70"
            >
              2.5 mi
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <button
              aria-label="Remove John Doe from favorites"
              class="rounded-full p-2 text-sm text-white shadow transition-colors bg-yellow-400/80 text-black"
              type="button"
            >
              <svg
                data-testid="star-icon-solid"
              />
            </button>
          </div>
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Music
          </span>
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Travel
          </span>
        </div>
      </div>
    </div>
  </div>
</button>
`;

exports[`GridCard snapshots renders card with online status 1`] = `
<button
  class="group relative w-full overflow-hidden rounded-[28px] bg-gradient-to-b from-white/5 to-white/[0.02] p-[2px] transition-transform duration-200 hover:-translate-y-1 active:scale-95 hover:shadow-[0_20px_40px_rgba(9,12,24,0.45)]"
  type="button"
>
  <div
    class="relative h-full w-full overflow-hidden rounded-[26px] bg-black"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-white/5 via-transparent to-white/5 opacity-0 transition-opacity duration-200 group-hover:opacity-30"
    />
    <div
      class="relative aspect-[3/4] w-full overflow-hidden"
    >
      <img
        alt="John Doe"
        class="object-cover"
        data-testid="grid-card-image"
        sizes="(min-width: 768px) 25vw, 50vw"
        src="https://example.com/photo.jpg"
      />
      <span
        class="absolute left-3 top-3 flex items-center gap-1 rounded-full bg-emerald-500/90 px-3 py-1 text-xs font-semibold text-white shadow-lg"
      >
        <span
          class="h-2 w-2 animate-pulse rounded-full bg-white"
        />
        Online
      </span>
      <div
        class="absolute inset-x-0 bottom-0 flex flex-col gap-2 bg-gradient-to-t from-black via-black/60 to-transparent px-4 pb-4 pt-16"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex flex-col text-left"
          >
            <span
              class="text-lg font-semibold text-white leading-snug"
            >
              John Doe
            </span>
            <span
              class="text-xs uppercase tracking-[0.3em] text-white/70"
            >
              2.5 mi
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          />
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Music
          </span>
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Travel
          </span>
        </div>
      </div>
    </div>
  </div>
</button>
`;

exports[`GridCard snapshots renders card with party status 1`] = `
<button
  class="group relative w-full overflow-hidden rounded-[28px] bg-gradient-to-b from-white/5 to-white/[0.02] p-[2px] transition-transform duration-200 hover:-translate-y-1 active:scale-95 hover:shadow-[0_20px_40px_rgba(9,12,24,0.45)]"
  type="button"
>
  <div
    class="relative h-full w-full overflow-hidden rounded-[26px] bg-black"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-white/5 via-transparent to-white/5 opacity-0 transition-opacity duration-200 group-hover:opacity-30"
    />
    <div
      class="relative aspect-[3/4] w-full overflow-hidden"
    >
      <img
        alt="John Doe"
        class="object-cover"
        data-testid="grid-card-image"
        sizes="(min-width: 768px) 25vw, 50vw"
        src="https://example.com/photo.jpg"
      />
      <span
        class="absolute left-3 top-3 flex items-center gap-1 rounded-full bg-emerald-500/90 px-3 py-1 text-xs font-semibold text-white shadow-lg"
      >
        <span
          class="h-2 w-2 animate-pulse rounded-full bg-white"
        />
        Online
      </span>
      <div
        class="absolute inset-x-0 bottom-0 flex flex-col gap-2 bg-gradient-to-t from-black via-black/60 to-transparent px-4 pb-4 pt-16"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex flex-col text-left"
          >
            <span
              class="text-lg font-semibold text-white leading-snug"
            >
              John Doe
            </span>
            <span
              class="text-xs uppercase tracking-[0.3em] text-white/70"
            >
              2.5 mi
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          />
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-pink-500/20 text-pink-400 border border-pink-500/30"
          >
            Party
          </span>
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Music
          </span>
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Travel
          </span>
        </div>
      </div>
    </div>
  </div>
</button>
`;

exports[`GridCard snapshots renders card with tags 1`] = `
<button
  class="group relative w-full overflow-hidden rounded-[28px] bg-gradient-to-b from-white/5 to-white/[0.02] p-[2px] transition-transform duration-200 hover:-translate-y-1 active:scale-95 hover:shadow-[0_20px_40px_rgba(9,12,24,0.45)]"
  type="button"
>
  <div
    class="relative h-full w-full overflow-hidden rounded-[26px] bg-black"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-white/5 via-transparent to-white/5 opacity-0 transition-opacity duration-200 group-hover:opacity-30"
    />
    <div
      class="relative aspect-[3/4] w-full overflow-hidden"
    >
      <img
        alt="John Doe"
        class="object-cover"
        data-testid="grid-card-image"
        sizes="(min-width: 768px) 25vw, 50vw"
        src="https://example.com/photo.jpg"
      />
      <span
        class="absolute left-3 top-3 flex items-center gap-1 rounded-full bg-emerald-500/90 px-3 py-1 text-xs font-semibold text-white shadow-lg"
      >
        <span
          class="h-2 w-2 animate-pulse rounded-full bg-white"
        />
        Online
      </span>
      <div
        class="absolute inset-x-0 bottom-0 flex flex-col gap-2 bg-gradient-to-t from-black via-black/60 to-transparent px-4 pb-4 pt-16"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex flex-col text-left"
          >
            <span
              class="text-lg font-semibold text-white leading-snug"
            >
              John Doe
            </span>
            <span
              class="text-xs uppercase tracking-[0.3em] text-white/70"
            >
              2.5 mi
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          />
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Music
          </span>
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Travel
          </span>
        </div>
      </div>
    </div>
  </div>
</button>
`;

exports[`GridCard snapshots renders card without distance 1`] = `
<button
  class="group relative w-full overflow-hidden rounded-[28px] bg-gradient-to-b from-white/5 to-white/[0.02] p-[2px] transition-transform duration-200 hover:-translate-y-1 active:scale-95 hover:shadow-[0_20px_40px_rgba(9,12,24,0.45)]"
  type="button"
>
  <div
    class="relative h-full w-full overflow-hidden rounded-[26px] bg-black"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-white/5 via-transparent to-white/5 opacity-0 transition-opacity duration-200 group-hover:opacity-30"
    />
    <div
      class="relative aspect-[3/4] w-full overflow-hidden"
    >
      <img
        alt="John Doe"
        class="object-cover"
        data-testid="grid-card-image"
        sizes="(min-width: 768px) 25vw, 50vw"
        src="https://example.com/photo.jpg"
      />
      <span
        class="absolute left-3 top-3 flex items-center gap-1 rounded-full bg-emerald-500/90 px-3 py-1 text-xs font-semibold text-white shadow-lg"
      >
        <span
          class="h-2 w-2 animate-pulse rounded-full bg-white"
        />
        Online
      </span>
      <div
        class="absolute inset-x-0 bottom-0 flex flex-col gap-2 bg-gradient-to-t from-black via-black/60 to-transparent px-4 pb-4 pt-16"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex flex-col text-left"
          >
            <span
              class="text-lg font-semibold text-white leading-snug"
            >
              John Doe
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          />
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Music
          </span>
          <span
            class="inline-flex items-center rounded-full font-medium px-2 py-0.5 text-xs bg-blue-500/20 text-blue-400 border border-blue-500/30"
          >
            Travel
          </span>
        </div>
      </div>
    </div>
  </div>
</button>
`;
